Fixed inputs getting covered effect

--- a/8.Form Wave Animation/style.css
+++ b/8.Form Wave Animation/style.css
@@ -93,7 +93,8 @@ body {
 }
 
 .form-control input:focus + label span,
-.form-control input:valid + label span {
+.form-control input:valid + label span,
+.form-control input:not(:placeholder-shown) + label span {
   color: lightblue;
   transform: translateY(-30px);
 }
